[metadata]
name = pythreadworker
version = 0.9.0
description = A threading library.
author = eight
author_email = eight04@gmail.com
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.10
    
keywords = thread, threading, worker
license = MIT
long_description = file: README.rst
url = https://github.com/eight04/pyWorker

[options]
zip_safe = True
packages = find:
python_requires = >=3.10

[vpip]
command_fallback = python cute.py
